kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sf-raffle-backend
spec:
  selector:
    app: sf-raffle-backend
  ports:
    - port: 5000
      targetPort: 5000
